force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>A legally binding document that defines the obligations to which the contractual parties involved in conducting the research must adhere.</description>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>