force-app/main/default/objects/Contract__c/fields/Approval_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_URL__c</fullName>
    <formula>$Setup.URL_Variable__c.I_RS_Researcher_Portal_Base_URL__c + &apos;/detail/&apos;
+
Approval_Request_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Request URL</label>
    <type>Text</type>
</CustomField>