force-app/main/default/objects/Contract__c/fields/I_RS_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Articulation Agreement</fullName>
            </value>
            <value>
                <fullName>Clinical Education Agreements (health)</fullName>
            </value>
            <value>
                <fullName>Clinical Trial Site Agreement</fullName>
            </value>
            <value>
                <fullName>Commercialisation Agreement</fullName>
            </value>
            <value>
                <fullName>Commercialisation Licence</fullName>
            </value>
            <value>
                <fullName>Confidentiality agreements</fullName>
            </value>
            <value>
                <fullName>Confidentiality Deed/NDA</fullName>
            </value>
            <value>
                <fullName>Consulting Services Agreement (Non-Research)</fullName>
            </value>
            <value>
                <fullName>Contractors Agreement (services to LTU)</fullName>
            </value>
            <value>
                <fullName>Courseware Licensing</fullName>
            </value>
            <value>
                <fullName>Data Transfer Agreement</fullName>
            </value>
            <value>
                <fullName>Grant Funding Agreement</fullName>
            </value>
            <value>
                <fullName>Honorary/Adjunct/Visitors Deed</fullName>
            </value>
            <value>
                <fullName>Hospital/Health Services Agreement</fullName>
            </value>
            <value>
                <fullName>Individual Student Agreement - Placements</fullName>
            </value>
            <value>
                <fullName>Industry PhD Agreement</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Assignment Deed</fullName>
            </value>
            <value>
                <fullName>International Agent Agreement</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Licence Agreement (receiving)</fullName>
            </value>
            <value>
                <fullName>Licence Agreement (supplying)</fullName>
            </value>
            <value>
                <fullName>Licence to Occupy</fullName>
            </value>
            <value>
                <fullName>Master Services Agreement</fullName>
            </value>
            <value>
                <fullName>Material/Data Transfer Agreement (receiving)</fullName>
            </value>
            <value>
                <fullName>Material/Data Transfer Agreement (supplying)</fullName>
            </value>
            <value>
                <fullName>Material Transfer Agreement (receiving)</fullName>
            </value>
            <value>
                <fullName>Material Transfer Agreement (supplying)</fullName>
            </value>
            <value>
                <fullName>Memorandum of Understanding (MOU)</fullName>
            </value>
            <value>
                <fullName>Mobility – Overseas Short Programs</fullName>
            </value>
            <value>
                <fullName>Mobility – Semester Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>