force-app/main/default/objects/Contract__c/fields/I_RS_Contract__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hierarchy or related contracts in case of renewal or amendments</description>
    <inlineHelpText>Select an existing Agreement if this request is for Variations or Subcontract/Collaboration requests.</inlineHelpText>
    <label>Parent Agreement</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Child Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>