force-app/main/default/objects/Contract__c/fields/I_RS_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract_End_Date__c</fullName>
    <label>Agreement/Variation End Date</label>
    <type>Date</type>
</CustomField>