force-app/main/default/objects/Contract__c/fields/I_RS_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract_Number__c</fullName>
    <displayFormat>{YY}{0000}</displayFormat>
    <label>Agreement Number</label>
    <type>AutoNumber</type>
</CustomField>