force-app/main/default/objects/Contract__c/fields/I_RS_Count_of_Linked_Agreements_Low__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Count_of_Linked_Agreements_Low__c</fullName>
    <label>Count of Linked Agreements Low Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>