force-app/main/default/objects/Contract__c/fields/I_RS_Date_Agreement_initiated__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Agreement_initiated__c</fullName>
    <label>Date Agreement initiated</label>
    <type>Date</type>
</CustomField>