force-app/main/default/objects/Contract__c/fields/I_RS_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Execution_Date__c</fullName>
    <inlineHelpText>The date the Agreement was signed by the last party.</inlineHelpText>
    <label>Execution Date</label>
    <type>Date</type>
</CustomField>