force-app/main/default/objects/Contract__c/fields/I_RS_Head_of_School__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Head_of_School__c</fullName>
    <formula>BLANKVALUE(I_RS_Project_Proposal__r.I_RS_LeadChiefInvestigator__r.Contact.I_RS_Head_Of_School__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head of School</label>
    <type>Text</type>
</CustomField>