force-app/main/default/objects/Contract__c/fields/I_RS_Individual__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements with Individual</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>