force-app/main/default/objects/Contract__c/fields/I_RS_Legal_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Legal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal User who will be responsible for the contract</description>
    <label>Legal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>