force-app/main/default/objects/Contract__c/fields/I_RS_Locked__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>