force-app/main/default/objects/Contract__c/fields/I_RS_Make_a_Chatter_Post__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Make_a_Chatter_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make a Chatter Post</label>
    <type>Checkbox</type>
</CustomField>