force-app/main/default/objects/Contract__c/fields/I_RS_Note__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>