force-app/main/default/objects/Contract__c/fields/I_RS_Number_of_Related_Parties__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Related_Parties__c</fullName>
    <inlineHelpText>Number of related parties to this Agreement</inlineHelpText>
    <label>Number of Related Parties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>