force-app/main/default/objects/Contract__c/fields/I_RS_Other_Reason_For_Closure__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_Reason_For_Closure__c</fullName>
    <label>Other Reason For Closure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>