force-app/main/default/objects/Contract__c/fields/I_RS_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Number__c</fullName>
    <formula>I_RS_Project_Proposal__r.Project_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Number</label>
    <type>Text</type>
</CustomField>