force-app/main/default/objects/Contract__c/fields/I_RS_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select an existing Project or Proposal if this Agreement request directly relates to a current project record.  If this Agreement relates to a new opportunity, leave blank.</inlineHelpText>
    <label>Project or Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>