force-app/main/default/objects/Contract__c/fields/I_RS_Project_Proposal_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal_URL__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_Record_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Proposal URL</label>
    <type>Text</type>
</CustomField>