force-app/main/default/objects/Contract__c/fields/I_RS_Reasons_for_Contract_or_Variation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reasons_for_Contract_or_Variation__c</fullName>
    <inlineHelpText>Include instructions and Organisation/s if unable to include in the Primary Organisation field, for the Agreement.  Documents can be attached on the next page under &quot;Documents and Agreements&quot; tab.  Add Industry Engagement contact name, if relevant.</inlineHelpText>
    <label>Reasons for Agreement or Variation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>