force-app/main/default/objects/Contract__c/fields/I_RS_Research_Office_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Office_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Research Office user responsible for the contract</description>
    <label>Research Office Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>