force-app/main/default/objects/Contract__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <inlineHelpText>“Executed” is when the Agreement/Variation has been signed and is active.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Preparing Instructions</fullName>
            </value>
            <value>
                <fullName>Instructions</fullName>
            </value>
            <value>
                <fullName>Engage Legal to Draft Variation</fullName>
            </value>
            <value>
                <fullName>Update Variation</fullName>
            </value>
            <value>
                <fullName>Notify Appropriate Stakeholders</fullName>
            </value>
            <value>
                <fullName>Create Letter</fullName>
                <label>Create Variation</label>
            </value>
            <value>
                <fullName>Completing Template</fullName>
            </value>
            <value>
                <fullName>Engage Legal to Draft Contract</fullName>
            </value>
            <value>
                <fullName>Reviewing Draft</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
                <label>Other Party Review</label>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Update Contract</fullName>
            </value>
            <value>
                <fullName>Researcher Review</fullName>
            </value>
            <value>
                <fullName>With Other Party</fullName>
            </value>
            <value>
                <fullName>La Trobe Signature</fullName>
            </value>
            <value>
                <fullName>Send to Client</fullName>
                <label>Send to Other Party</label>
            </value>
            <value>
                <fullName>Client Countersign</fullName>
                <label>Other Party Countersign</label>
            </value>
            <value>
                <fullName>Receive Client Signed Copy</fullName>
                <label>Receive Other Party Signed Copy</label>
            </value>
            <value>
                <fullName>Receive Executed Copy</fullName>
            </value>
            <value>
                <fullName>Notify of Variation Outcome</fullName>
            </value>
            <value>
                <fullName>La Trobe Countersign</fullName>
            </value>
            <value>
                <fullName>La Trobe University Signature</fullName>
            </value>
            <value>
                <fullName>Send Signed Copy Back</fullName>
            </value>
            <value>
                <fullName>Submit to Research Office</fullName>
            </value>
            <value>
                <fullName>Return Signed Copy to Client</fullName>
                <label>Return Signed Copy to Other Party</label>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>