force-app/main/default/objects/Contract__c/fields/I_RS_TRIM_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_TRIM_Document_Number__c</fullName>
    <inlineHelpText>Corporate record number for this Agreement</inlineHelpText>
    <label>TRIM Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>