force-app/main/default/objects/Contract__c/fields/I_RS_TRIM_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_TRIM_URL__c</fullName>
    <inlineHelpText>Link to corporate record number for this record</inlineHelpText>
    <label>TRIM URL</label>
    <type>Url</type>
</CustomField>