force-app/main/default/objects/Contract__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <inlineHelpText>Is this request for a new Agreement or a Variation to an existing Agreement?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Agreement Request</fullName>
            </value>
            <value>
                <fullName>Agreement Variation Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>