force-app/main/default/objects/Contract__c/fields/I_RS_Update_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Update_Approval_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Being updated by a Process Builder to call a flow</description>
    <label>Update Approval Comments</label>
    <type>Checkbox</type>
</CustomField>