force-app/main/default/objects/Contract__c/fields/I_RS_Valid_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Valid_for_Deletion__c</fullName>
    <description>If false, the current user should not be allowed to delete this record. Currently, only system admins can delete.</description>
    <formula>$Profile.Name = &apos;System Administrator&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid for Deletion</label>
    <type>Checkbox</type>
</CustomField>