force-app/main/default/objects/Contract__c/fields/L_PR_Agency_Signatory__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Agency_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Signatory</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You are allowed to select only External Contact Affiliation.</errorMessage>
        <filterItems>
            <field>I_RM_Affiliation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>External Contact</value>
        </filterItems>
        <filterItems>
            <field>I_RM_Affiliation__c.I_RM_Role__c</field>
            <operation>equals</operation>
            <value>External Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Agreements(Agency Signatory)</relationshipLabel>
    <relationshipName>Agreements_Agency_Signatory</relationshipName>
    <type>Lookup</type>
</CustomField>