force-app/main/default/objects/Contract__c/fields/L_PR_Amount__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>