force-app/main/default/objects/Contract__c/fields/L_PR_Comission_Rates__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Comission_Rates__c</fullName>
    <label>Commission Rates (Fee)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>12.5%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>Sliding Scale from 10 - 12.5% (based on targets)</fullName>
            </value>
            <value>
                <fullName>Sliding Scale from 12.5 - 15% (based on targets)</fullName>
            </value>
            <value>
                <fullName>Sliding Scale from 10 - 15% (based on targets)</fullName>
            </value>
            <value>
                <fullName>Various rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>