force-app/main/default/objects/Contract__c/fields/L_PR_Description__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>