force-app/main/default/objects/Contract__c/fields/L_PR_isClosed__c.field-meta.xml
<CustomField>
    <fullName>L_PR_isClosed__c</fullName>
    <formula>IF((ISPICKVAL(I_RS_Status__c, &quot;Closed&quot;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isClosed</label>
    <type>Checkbox</type>
</CustomField>