force-app/main/default/objects/Contract__c/fields/L_PR_IsConverted__c.field-meta.xml
<CustomField>
    <fullName>L_PR_IsConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Agreement is converted from opportunity</description>
    <label>IsConverted</label>
    <type>Checkbox</type>
</CustomField>