force-app/main/default/objects/Contract__c/fields/L_PR_isPrimary__c.field-meta.xml
<CustomField>
    <fullName>L_PR_isPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrimary</label>
    <type>Checkbox</type>
</CustomField>