force-app/main/default/objects/Contract__c/fields/L_PR_LTU_Signatory__c.field-meta.xml
<CustomField>
    <fullName>L_PR_LTU_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LTU Signatory</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You are allowed to select only La Trobe Staff.</errorMessage>
        <filterItems>
            <field>I_RM_Affiliation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>La Trobe Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Agreements (LTU Signatory)</relationshipLabel>
    <relationshipName>Agreements_LTU_Signatory</relationshipName>
    <type>Lookup</type>
</CustomField>