force-app/main/default/objects/Contract__c/fields/L_PR_Nominated_Agency_staff__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Nominated_Agency_staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominated Agency staff for Notices</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>I_RM_Affiliation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>External Contact</value>
        </filterItems>
        <filterItems>
            <field>I_RM_Affiliation__c.I_RM_Role__c</field>
            <operation>equals</operation>
            <value>External Contact</value>
        </filterItems>
        <infoMessage>You are allowed to select only External Contact.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Agreements (Nominated Agency staff for Notices)</relationshipLabel>
    <relationshipName>Agreements_Nominated_Agency_staff</relationshipName>
    <type>Lookup</type>
</CustomField>