force-app/main/default/objects/Contract__c/fields/L_PR_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the PRM Opportunity</errorMessage>
        <filterItems>
            <field>Opportunity.RecordType.Name</field>
            <operation>equals</operation>
            <value>PRM Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>