force-app/main/default/objects/Contract__c/fields/L_PR_Reason_for_termination__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Reason_for_termination__c</fullName>
    <label>Reason For Termination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>