force-app/main/default/objects/Contract__c/fields/L_PR_Recruitment_Targets__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Recruitment_Targets__c</fullName>
    <label>Recruitment Targets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>