force-app/main/default/objects/Contract__c/fields/L_PR_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Termination_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>