force-app/main/default/objects/Contract__c/fields/L_PR_Territory__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Territory__c</fullName>
    <label>Territory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_RM_Country</valueSetName>
    </valueSet>
</CustomField>