force-app/main/default/objects/Contract__c/fields/L_PR_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Under_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Review</label>
    <type>Checkbox</type>
</CustomField>