force-app/main/default/objects/Contract__c/fields/L_PR_Variation_Other__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Variation_Other__c</fullName>
    <label>Variation Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>