force-app/main/default/objects/Contract__c/fields/L_PR_Variation_type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Variation_type__c</fullName>
    <label>Variation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incentive scheme implemented</fullName>
            </value>
            <value>
                <fullName>Updates to agreement clauses</fullName>
            </value>
            <value>
                <fullName>Updates to Schedule 1</fullName>
            </value>
            <value>
                <fullName>Other changes of scope/nature of the partnership</fullName>
            </value>
            <value>
                <fullName>Other (Please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>