force-app/main/default/objects/Contract__c/recordTypes/I_RS_Draft_from_client_template_legal_review.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Draft_from_client_template_legal_review</fullName>
    <active>true</active>
    <label>Other Party Agreement (Legal Review)</label>
</RecordType>