force-app/main/default/objects/Contract__c/recordTypes/I_RS_Draft_from_LTU_template.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Draft_from_LTU_template</fullName>
    <active>true</active>
    <label>La Trobe Agreement (Template)</label>
</RecordType>