force-app/main/default/objects/Contract__c/recordTypes/I_RS_New_La_Trobe_contract.recordType-meta.xml
<RecordType>
    <fullName>I_RS_New_La_Trobe_contract</fullName>
    <active>true</active>
    <label>La Trobe Agreement (No Template)</label>
</RecordType>