force-app/main/default/objects/Contract__c/recordTypes/I_RS_Variation_from_Client_Template_Legal_Review.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Variation_from_Client_Template_Legal_Review</fullName>
    <active>true</active>
    <label>Other Party Variation (Legal Review)</label>
</RecordType>